--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,10 +2,12 @@ pt-BR:
   devise:
     sessions:
       signed_in: "Login efetuado com sucesso."
-      signed_out: "Logout efetuado com sucesso."
+      signed_out: "Saída efetuada com sucesso."
     failure:
       invalid: "E-mail ou senha inválidos."
       unauthenticated: "Você precisa fazer login ou se registrar antes de continuar."
+    registrations:
+      signed_up: "Boas-vindas! Seu cadastro foi realizado com sucesso."
 
   articles:
     create:
