Adiciona funcionalidade de gerenciamento de avisos: cria o modelo, controlador e views para avisos, além de implementar autenticação e autorização. Atualiza traduções e ajusta a interface do usuário.

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -22,3 +22,10 @@ pt-BR:
       notice: "Artigo reprovado com sucesso."
     set_pending:
       notice: "O status do artigo foi alterado para 'Pendente'."
+  notices:
+    create:
+      notice: "Aviso criado com sucesso."
+    update:
+      notice: "Aviso atualizado com sucesso."
+    destroy:
+      notice: "Aviso excluído com sucesso."
